2018-10-24  Richard Biener  <rguenther@suse.de>

PR tree-optimization/84013
	* tree-ssa-structalias.c (struct msdi_data): New struct for
	marshalling data to walk_stmt_load_store_ops.
	(maybe_set_dependence_info): Refactor as callback for
	walk_stmt_load_store_ops.
	(compute_dependence_clique): Set restrict info on all stmt kinds.

	* gcc.dg/tree-ssa/restrict-9.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@265455 138bc75d-0d04-0410-961f-82ee72b054a4